// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconBookOpenSvg should match snapshot 1`] = `
"import * as React from 'react'

import { IconProps } from '../types'

export const IconBookOpenSvg = ({ title, titleId, ...props }: IconProps) => (
  <svg
    xmlns=\\"http://www.w3.org/2000/svg\\"
    fill=\\"none\\"
    viewBox=\\"0 0 24 24\\"
    stroke=\\"currentColor\\"
    focusable=\\"false\\"
    shapeRendering=\\"geometricPrecision\\"
    aria-labelledby={titleId}
    {...props}
  >
    {title ? <title id={titleId}>{title}</title> : null}
    <path
      strokeLinecap=\\"round\\"
      strokeLinejoin=\\"round\\"
      strokeWidth={2}
      d=\\"M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253\\"
    />
  </svg>
)
"
`;

exports[`IconChevronDownSvg should match snapshot 1`] = `
"import * as React from 'react'

import { IconProps } from '../types'

export const IconChevronDownSvg = ({ title, titleId, ...props }: IconProps) => (
  <svg
    xmlns=\\"http://www.w3.org/2000/svg\\"
    fill=\\"none\\"
    viewBox=\\"0 0 24 24\\"
    stroke=\\"currentColor\\"
    focusable=\\"false\\"
    shapeRendering=\\"geometricPrecision\\"
    aria-labelledby={titleId}
    {...props}
  >
    {title ? <title id={titleId}>{title}</title> : null}
    <path
      strokeLinecap=\\"round\\"
      strokeLinejoin=\\"round\\"
      strokeWidth={2}
      d=\\"M19 9l-7 7-7-7\\"
    />
  </svg>
)
"
`;

exports[`IconChevronRightSvg should match snapshot 1`] = `
"import * as React from 'react'

import { IconProps } from '../types'

export const IconChevronRightSvg = ({
  title,
  titleId,
  ...props
}: IconProps) => (
  <svg
    xmlns=\\"http://www.w3.org/2000/svg\\"
    fill=\\"none\\"
    viewBox=\\"0 0 24 24\\"
    stroke=\\"currentColor\\"
    focusable=\\"false\\"
    shapeRendering=\\"geometricPrecision\\"
    aria-labelledby={titleId}
    {...props}
  >
    {title ? <title id={titleId}>{title}</title> : null}
    <path
      strokeLinecap=\\"round\\"
      strokeLinejoin=\\"round\\"
      strokeWidth={2}
      d=\\"M9 5l7 7-7 7\\"
    />
  </svg>
)
"
`;

exports[`IconLockClosedSvg should match snapshot 1`] = `
"import * as React from 'react'

import { IconProps } from '../types'

export const IconLockClosedSvg = ({ title, titleId, ...props }: IconProps) => (
  <svg
    xmlns=\\"http://www.w3.org/2000/svg\\"
    fill=\\"none\\"
    viewBox=\\"0 0 24 24\\"
    stroke=\\"currentColor\\"
    focusable=\\"false\\"
    shapeRendering=\\"geometricPrecision\\"
    aria-labelledby={titleId}
    {...props}
  >
    {title ? <title id={titleId}>{title}</title> : null}
    <path
      strokeLinecap=\\"round\\"
      strokeLinejoin=\\"round\\"
      strokeWidth={2}
      d=\\"M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z\\"
    />
  </svg>
)
"
`;

exports[`IconPlusSmallSvg should match snapshot 1`] = `
"import * as React from 'react'

import { IconProps } from '../types'

export const IconPlusSmallSvg = ({ title, titleId, ...props }: IconProps) => (
  <svg
    xmlns=\\"http://www.w3.org/2000/svg\\"
    fill=\\"none\\"
    viewBox=\\"0 0 24 24\\"
    stroke=\\"currentColor\\"
    focusable=\\"false\\"
    shapeRendering=\\"geometricPrecision\\"
    aria-labelledby={titleId}
    {...props}
  >
    {title ? <title id={titleId}>{title}</title> : null}
    <path
      strokeLinecap=\\"round\\"
      strokeLinejoin=\\"round\\"
      strokeWidth={2}
      d=\\"M12 6v6m0 0v6m0-6h6m-6 0H6\\"
    />
  </svg>
)
"
`;
